@@ -15,6 +15,7 @@
 #include "kmmessage.h"
 #include "kpgp.h"
 #include "kfontdialog.h"
+#include "kfontutils.h"
 
 #include <kapp.h>
 #include <kapp.h>
@@ -110,7 +111,6 @@ static QLineEdit* createLabeledEntry(QWidget* parent, QGridLayout* grid,
 // Add a widget with a label and optional detail button ("...")
 // The detail button is not created if detail_return is NULL.
 // The argument 'label' is the label that will be left of the entry field.
-// The argument 'text' is the text that will show up in the entry field.
 // The whole thing is placed in the grid from row/col to the right.
 static void addLabeledWidget(QWidget* parent, QGridLayout* grid,
 			     const char* aLabel, QWidget* widg,
@@ -127,7 +127,7 @@ static void addLabeledWidget(QWidget* parent, QGridLayout* grid,
   grid->addWidget(label, gridy, gridx++);
 
   widg->setMinimumSize(100, label->height()+2);
-  widg->setMaximumSize(1000, label->height()+2);
+  //widg->setMaximumSize(1000, label->height()+2);
   grid->addWidget(widg, gridy, gridx++);
 
   if (detail_return)
@@ -306,44 +306,49 @@ void KMSettings::createTabAppearance(QWidget* parent)
   KConfig* config = app->getConfig();
   QPushButton* btn;
   QLabel* lbl;
+  QFont fnt;
 
   //----- group: fonts
   grp = new QGroupBox(i18n("Fonts"), tab);
   box->addWidget(grp);
-  grid = new QGridLayout(grp, 8, 5, 20, 4);
+  grid = new QGridLayout(grp, 5, 4, 20, 4);
 
   bodyFontLabel = new QLabel(grp);
   addLabeledWidget(grp, grid, i18n("Message Body Font:"), bodyFontLabel, 
-		   2, 1, &btn);
+		   2, 0, &btn);
   connect(btn,SIGNAL(clicked()),this,SLOT(slotBodyFontSelect()));
 
   listFontLabel = new QLabel(grp);
   addLabeledWidget(grp, grid, i18n("Message List Font:"), listFontLabel,
-		   3, 1, &btn);
+		   3, 0, &btn);
   connect(btn,SIGNAL(clicked()),this,SLOT(slotListFontSelect()));
 
   lbl = new QLabel(i18n("Changing fonts currently only occurs when a new\n"
 			"window is opened or kmail is restarted"), grp);
   lbl->setMinimumSize(lbl->sizeHint());
-  grid->addMultiCellWidget(lbl, 4, 4, 1, 4);
+  grid->addMultiCellWidget(lbl, 4, 4, 0, 2);
 
-  grid->setColStretch(0,0);
-  grid->setColStretch(1,1);
+  grid->setColStretch(0,1);
+  grid->setColStretch(1,10);
   grid->setColStretch(2,0);
-  grid->setRowStretch(1,1);
-  grid->setRowStretch(2,10);
-  grid->setRowStretch(3,0);
-  grid->setRowStretch(4,10);
-  grid->activate();
+
+  //----- set values
+  config->setGroup("Fonts");
+
+  fnt = kstrToFont(config->readEntry("body-font", "helvetica-medium-r-12"));
+  bodyFontLabel->setAutoResize(TRUE);
+  bodyFontLabel->setText(kfontToStr(fnt));
+  bodyFontLabel->setFont(fnt);
+
+  fnt = kstrToFont(config->readEntry("list-font", "helvetica-medium-r-12"));
+  listFontLabel->setAutoResize(TRUE);
+  listFontLabel->setText(kfontToStr(fnt));
+  listFontLabel->setFont(fnt);
 
   //----- activation
   box->addStretch(100);
   addTab(tab, i18n("Appearance"));
-
-  //----- set values
-  config->setGroup("Fonts");
-  bodyFontLabel->setText(config->readEntry("body-font", "helvetica"));
-  listFontLabel->setText(config->readEntry("list-font", "helvetica"));
+  grid->activate();
 }
 
 
@@ -553,11 +558,13 @@ const QString KMSettings::tabNetworkAcctStr(const KMAccount* act) const
 void KMSettings::slotBodyFontSelect()
 {
   QFont font;
-  KFontDialog dlg(0, i18n("Message Body Font"), TRUE);
-  dlg.setFont(QFont(bodyFontLabel->text()));
-  //dlg.show();
+  KFontDialog dlg(this, i18n("Message Body Font"), TRUE);
+
+  font = kstrToFont(bodyFontLabel->text());
   dlg.getFont(font);
-  bodyFontLabel->setText(font.family());
+  bodyFontLabel->setFont(font);
+  bodyFontLabel->setText(kfontToStr(font));
+  bodyFontLabel->adjustSize();
 }
 
 
@@ -565,11 +572,13 @@ void KMSettings::slotBodyFontSelect()
 void KMSettings::slotListFontSelect()
 {
   QFont font;
-  KFontDialog dlg(0, i18n("Message List Font"), TRUE);
-  dlg.setFont(QFont(listFontLabel->text()));
-  //dlg.show();
+  KFontDialog dlg(this, i18n("Message List Font"), TRUE);
+
+  font = kstrToFont(listFontLabel->text());
   dlg.getFont(font);
-  listFontLabel->setText(font.family());
+  listFontLabel->setFont(font);
+  listFontLabel->setText(kfontToStr(font));
+  listFontLabel->adjustSize();
 }
 
 
